--- a/index.html
+++ b/index.html
@@ -171,7 +171,6 @@
 
     <section class="services" id="services">
       <div class="heading">
-        <span>our services</span>
         <h1>Discover Lebanese Gems and embark with us for an adventure!</h1>
 
         <div class="box-container">
@@ -243,31 +242,35 @@
       });
     </script>
 
+    <div id="aboutus-section">
+      <div class="aboutus-content">
+        <!-- get waves.io -->
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+          <path
+            fill="#ffff"
+            fill-opacity="1"
+            d="M0,256L48,240C96,224,192,192,288,154.7C384,117,480,75,576,80C672,85,768,139,864,176C960,213,1056,235,1152,234.7C1248,235,1344,213,1392,202.7L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+          ></path>
+        </svg>
 
-
-<div id="aboutus-section">
-  
-    <div class="aboutus-content">
-      <p>Meet Lara and Amro, two Computer Engineering students passionate about Lebanon's culture, <br>
-        history, and natural beauty. Through their platform, they seek to highlight Lebanon's diverse landscapes,<br> 
-        from the majestic peaks of the Mount Lebanon range to the sun-kissed shores of the Mediterranean. 
+        <p>
+          Meet Lara and Amro, two Computer Engineering students passionate about
+          Lebanon's culture, <br />
+          history, and natural beauty. Through their platform, they seek to
+          highlight Lebanon's diverse landscapes,<br />
+          from the majestic peaks of the Mount Lebanon range to the sun-kissed
+          shores of the Mediterranean.
         </p>
-    <!-- get waves.io -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffff" fill-opacity="1" d="M0,256L48,240C96,224,192,192,288,154.7C384,117,480,75,576,80C672,85,768,139,864,176C960,213,1056,235,1152,234.7C1248,235,1344,213,1392,202.7L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
-      
-</div>
+        <br />
+        <br />
+        <br />
+      </div>
 
-<div id="culture-section">
+      <!-- <div id="culture-section">
   
   <div class="aboutus-content">
     <h1>Support culture by supporting local!
-      </h1>
-  
-    
-</div>
-
-
-
-
+      </h1> -->
+    </div>
   </body>
 </html>
